# ARIES

./: .gitignore  README.md  aries.py  clustal.py  environment.yml  msa_dataset.py  msa_tools.py  pairwise.py  plm_wrapper.py  pyproject.toml  run_aries.py  run_test_battery.py  scoring.py  utils.py
datasets/: README.md
datasets/BAliBASE/reference_outputs/: BB20001.aln  BB20002.aln  BB20003.aln  BB20004.aln  BB20005.aln  BB20006.aln  BB20007.aln  BB20008.aln  BB20009.aln  BB20010.aln  BB20011.aln  BB20012.aln  BB20013.aln  BB20014.aln  BB20015.aln  BB20016.aln  BB20017.aln  BB20018.aln  BB20019.aln  BB20020.aln  BB20021.aln  BB20022.aln  BB20023.aln  BB20024.aln  BB20025.aln  BB20026.aln  BB20027.aln  BB20028.aln  BB20029.aln  BB20030.aln  BB20031.aln  BB20032.aln  BB20033.aln  BB20034.aln  BB20035.aln  BB20036.aln  BB20037.aln  BB20038.aln  BB20039.aln  BB20040.aln  (+93 more)
datasets/HOMSTRAD/inputs/: 6PF2K.fasta  6PGD.fasta  7kD_DNA_binding.fasta  A2M_A.fasta  A2M_B.fasta  ABC_tran.fasta  ACBP.fasta  ACT.fasta  ADF.fasta  ALBUMIN.fasta  ANATO.fasta  ANK.fasta  AP_endonucleas1.fasta  ARID.fasta  ATP-gua_Ptrans.fasta  ATP-sulfurylase.fasta  ATP-synt.fasta  ATP-synt_DE_N.fasta  Acetyltransf.fasta  Acetyltransf2.fasta  Agglutinin.fasta  Ald_Xan_dh_1.fasta  Ald_Xan_dh_2.fasta  Aldolase_II.fasta  Alpha_adaptinC12.fasta  Alpha_adaptinC2.fasta  Alpha_adaptin_C.fasta  Amidase_2.fasta  Amidinotransferase.fasta  Antifreeze.fasta  Apocytochrome_F.fasta  Arch_histone.fasta  Arg_repressor_C.fasta  Arg_repressor_N.fasta  Arthro_defensin.fasta  Asp_Glu_race.fasta  Astacin.fasta  B.fasta  (+529 more)
(+869 files in other folders)
